--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>위즈음악학원</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx">
-      test
-    </script>
+    <div id="root">test</div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
