--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>위즈음악학원</title>
   </head>
   <body>
-    <div id="root">test</div>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
